@@ -20,17 +20,12 @@
 
 package org.matsim.core.network;
 
-import java.io.IOException;
-import java.io.ObjectInputStream;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.matsim.api.core.v01.Coord;
 import org.matsim.api.core.v01.Id;
 import org.matsim.api.core.v01.TransportMode;
@@ -38,12 +33,12 @@ import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
 import org.matsim.api.core.v01.network.Node;
 import org.matsim.core.gbl.Gbl;
-import org.matsim.core.utils.misc.Time;
 import org.matsim.utils.objectattributes.attributable.Attributes;
+import org.matsim.utils.objectattributes.attributable.AttributesImpl;
 
 /*deliberately package*/ class LinkImpl implements Link {
 
-	private final static Logger log = Logger.getLogger(Link.class);
+	private final static Logger log = LogManager.getLogger(Link.class);
 
 	//////////////////////////////////////////////////////////////////////
 	// member variables
@@ -51,19 +46,15 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 
 	private final Id<Link> id;
 
-	private Node from = null;
-	private Node to = null;
+	private Node from;
+	private Node to;
 
 	private double length = Double.NaN;
-	private double freespeed = Double.NaN;
-	private double capacity = Double.NaN;
-	private double nofLanes = Double.NaN;
+	private double freespeed;
+	private double capacity;
+	private double nofLanes;
 
-	private Set<String> allowedModes = HashSetCache.get(new HashSet<String>());
-
-//	private String type = null;
-
-//	private String origid = null;
+	private Set<String> allowedModes = DEFAULT_ALLOWED_MODES;
 
 	private final Network network;
 
@@ -71,28 +62,20 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 	private static int cpWarnCnt = 0 ;
 	private static int plWarnCnt = 0 ;
 	private static int lengthWarnCnt = 0;
-	private static int loopWarnCnt = 0 ;
 	private static final int maxFsWarnCnt = 1;
 	private static final int maxCpWarnCnt = 1;
 	private static final int maxPlWarnCnt = 1;
 	private static final int maxLengthWarnCnt = 1;
-	private static final int maxLoopWarnCnt = 1;
 
-	private static final Set<String> DEFAULT_ALLOWED_MODES;
-	static {
-		Set<String> set = new HashSet<>();
-		set.add(TransportMode.car);
-		DEFAULT_ALLOWED_MODES = HashSetCache.get(set);
-	}
+	private static final Set<String> DEFAULT_ALLOWED_MODES = HashSetCache.get(Set.of(TransportMode.car));
 
-	private final Attributes attributes = new Attributes();
+	private final Attributes attributes = new AttributesImpl();
 
 	/*deliberately package*/ LinkImpl(final Id<Link> id, final Node from, final Node to, final Network network, final double length, final double freespeed, final double capacity, final double lanes) {
 		this.id = id;
 		this.network = network;
 		this.from = from;
 		this.to = to;
-		this.allowedModes = DEFAULT_ALLOWED_MODES;
 		this.setLength(length);
 		//for the eventual time variant attributes don't call the setter as it must be overwritten in TimeVariantLinkImpl
 		//and thus causes problems during object initialization, dg nov 2010
@@ -102,12 +85,7 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 		this.checkCapacitySemantics();
 		this.nofLanes = lanes;
 		this.checkNumberOfLanesSemantics();
-		if (this.from.equals(this.to) && (loopWarnCnt < maxLoopWarnCnt)) {
-			loopWarnCnt++ ;
-			log.warn("fromNode=toNode=" + this.to + ": link is a loop");
-			if ( loopWarnCnt == maxLoopWarnCnt )
-				log.warn(Gbl.FUTURE_SUPPRESSED ) ;
-		}
+		// loop links have become an acceptable thing for matsim.  kai, sep'19. --> warnings turned off
 	}
 
 	private void checkCapacitySemantics() {
@@ -129,6 +107,7 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 	private void checkFreespeedSemantics() {
 		if ((this.freespeed <= 0.0) && (fsWarnCnt < maxFsWarnCnt) ) {
 			fsWarnCnt++ ;
+			log.warn("freespeed=" + this.freespeed + " of link id " + this.getId() +" may cause problems");
 			if ( fsWarnCnt == maxFsWarnCnt )
 				log.warn( Gbl.FUTURE_SUPPRESSED) ;
 		}
@@ -180,16 +159,6 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 		return true;
 	}
 
-//	/*deliberately package*/ final String getOrigId2() {
-//		// yyyyyy should now be possible to solve this with Attributable. kai, nov'16
-//		return this.origid ;
-//	}
-
-//	/*deliberately package*/ final String getType2() {
-//		// yyyyyy should now be possible to solve this with Attributable. kai, nov'16
-//		return this.type ;
-//	}
-	
 	// ---
 
 	@Override
@@ -208,17 +177,7 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 		return this.capacity;
 	}
 
-
-	@Override
-	public double getFlowCapacityPerSec() {
-		return getFlowCapacityPerSec(Time.getUndefinedTime());
-	}
-	@Override
-	public double getFlowCapacityPerSec(@SuppressWarnings("unused") final double time) {
-		return this.getCapacity(time) / network.getCapacityPeriod();
-	}
-	
-	double getCapacityPeriod() {
+	public double getCapacityPeriod() {
 		// since the link has a back pointer to network, we can as well provide this here (????)
 		// TimeVariantLinkImpl needs this ... but why?
 		return network.getCapacityPeriod() ;
@@ -229,7 +188,6 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 	@Override
 	public double getFreespeed() {
 		return this.freespeed;
-//		return getFreespeed(Time.UNDEFINED_TIME);
 	}
 
 	/**
@@ -263,7 +221,6 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 	@Override
 	public double getNumberOfLanes() {
 		return this.nofLanes;
-//		return this.getNumberOfLanes(Time.UNDEFINED_TIME);
 	}
 
 	@Override
@@ -287,16 +244,6 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 		this.allowedModes = HashSetCache.get(modes);
 	}
 
-//	/*deliberately package*/ final void setOrigId2(final String id) {
-//		this.origid = id;
-//	}
-	
-	private void readObject(ObjectInputStream ois) throws ClassNotFoundException, IOException {
-		ois.defaultReadObject();
-		this.from.addOutLink(this);
-		this.to.addInLink(this);
-	}
-
 	@Override
 	public String toString() {
 		return super.toString() +
@@ -308,9 +255,6 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 		"[capacity=" + this.capacity + "]" +
 		"[permlanes=" + this.nofLanes + "]" +
 		"[modes=" + this.allowedModes ;
-//		"[origid=" + this.origid + "]" + // not in api
-//		"[type=" + this.type + "]"; // not in api
-		// yyyyyy add the "free text" attributes
 	}
 
 	@Override
@@ -331,37 +275,13 @@ import org.matsim.utils.objectattributes.attributable.Attributes;
 	}
 
 	/*package*/ abstract static class HashSetCache {
-		private final static Map<Integer, List<Set<String>>> cache = new ConcurrentHashMap<>();
+		private final static ConcurrentMap<Integer, Set<String>> cache = new ConcurrentHashMap<>();
+
 		public static Set<String> get(final Set<String> set) {
 			if (set == null) {
 				return null;
 			}
-			int size = set.size();
-			List<Set<String>> list = cache.get(size);
-			if (list == null) {
-				list = new ArrayList<>(4);
-				cache.put(size, list);
-				HashSet<String> set2 = new HashSet<>(set);
-				Set<String> set3 = Collections.unmodifiableSet(set2);
-				list.add(set3);
-				return set3;
-			}
-			for (Set<String> s : list) {
-				if (s.equals(set)) {
-					return s;
-				}
-			}
-			// not yet in cache
-			HashSet<String> set2 = new HashSet<>(set);
-			Set<String> set3 = Collections.unmodifiableSet(set2);
-			list.add(set3);
-			return set3;
+			return cache.computeIfAbsent(set.hashCode(), key -> Set.copyOf(set));
 		}
-
 	}
-
-//	/*deliberately package*/ void setType2(String type2) {
-//		// yyyyyy should now be possible to solve this with Attributable. kai, nov'16
-//		this.type = type2 ;
-//	}
 }
